--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <html>
 <head>
-<title>µÚÒ»¸öÍøÕ¾!</title>
+<title>ç¬¬ä¸€ä¸ªç½‘ç«™!</title>
 </head>
 <body>
 
 <p>
 <img src="lmy.jpg"  alt="lmy" width="295"  height="340" >
-ÕâÊÇlmyµÄö¦ÕÕ
+è¿™æ˜¯lmyçš„é“ç…§
 </p>
 
 
 <p>
 <img src="yyh.jpg"  alt="yyh"  width="295"  height="340">
- ÕâÊÇyyhµÄö¦ÕÕ
+ è¿™æ˜¯yyhçš„é“ç…§
 </p>
 
 
 <p>
 <img src="zc.jpg"  alt="zc"  width="295"  height="340" >
-ÕâÊÇzÀÏÊ¦µÄö¦ÕÕ
+è¿™æ˜¯zè€å¸ˆçš„é“ç…§
 </p>
 
 
-ÈçºÎ?<del>Æ¯ÁÁ</del>Ë§Âð?
-<p><del>(ÍÛ¹þ¹þ¹þ£¬ÅÄµÄÕâÃ´ºÃ£¬´Ë´¦Ó¦ÓÐÕÆÉù)</del></p>
+å¦‚ä½•?<del>æ¼‚äº®</del>å¸…å—?
+<p><del>(å“‡å“ˆå“ˆå“ˆï¼Œæ‹çš„è¿™ä¹ˆå¥½ï¼Œæ­¤å¤„åº”æœ‰æŽŒå£°)</del></p>
 
-<a src="test.htm">¶ÔÁË,Ë³±ã×ö¸öÒ³Ãæ×ª»»µÄÐ¡²âÊÔ</a>
+<a src="test.htm">å¯¹äº†,é¡ºä¾¿åšä¸ªé¡µé¢è½¬æ¢çš„å°æµ‹è¯•</a>
 
 
 </body>
