--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>第一个网站!</title>
- <meta http-equiv="Content-Type" content="index/html; charset=utf-8">
+ <meta http-equiv="Content-Type" content="index/html; charset=gb2312">
 </head>
 <body>
 
