--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 如何?<del>漂亮</del>帅吗?
 <p><del>(哇哈哈哈，拍的这么好，此处应有掌声)</del></p>
 
-<a src="https://github.com/turryfam/turryfam.github.io/blob/master/test.htm">对了,顺便做个页面转换的小测试</a>
+<a src="https://turryfam.github.io/test.htm">对了,顺便做个页面转换的小测试</a>
 
 
 </body>
