--- a/index.html
+++ b/index.html
@@ -2,33 +2,13 @@
 <html>
 <head>
 <title>第一个网站!</title>
- <meta charset=gb2312">
+ <meta charset=gb2312>
 </head>
 <body>
-
-<p>
-<img src="lmy.jpg"  alt="lmy" width="295"  height="340" >
-这是lmy的靓照
-</p>
-
-
-<p>
-<img src="yyh.jpg"  alt="yyh"  width="295"  height="340">
- 这是yyh的靓照
-</p>
-
-
-<p>
-<img src="zc.jpg"  alt="zc"  width="295"  height="340" >
-这是z老师的靓照
-</p>
-
-
-如何?<del>漂亮</del>帅吗?
-<p><del>(哇哈哈哈，拍的这么好，此处应有掌声)</del></p>
-
-
-
+<h1>你好！欢迎来到本站:)</h1>
+<p>请问您想看点什么呢？</p>
+ <a href="https:turryfam.github.io/zhaopian.html">1.老师同学的照片</a>
+ <a href="https:turryfam.github.io/mima.zip">2.下载无法输入非数字密码的本地密码锁</a>
 </body>
 
 </html>
