--- a/zhaopian.html
+++ b/zhaopian.html
@@ -14,7 +14,7 @@
  这是YYH的靓照
 </p>
  <p>
-<img src=“zc.jpg” alt="zc" width="295" height="340">
+<img src="zc.jpg" alt="zc" width="295" height="340">
 这是z老师的靓照
 </p>
 <h3><del>（哇哈哈哈，拍的这么好，快夸我</del></h3>
